feat: add examples to swagger and add validations to requests
